--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         class="work-image"></a>
                 <a href="https://vanshika-nahar.github.io/weather_app.github.io/" target="_blank"><img src="images/work5.png" alt=""
                         class="work-image"></a>
-                <a href="/"><img src="images/work5.png" alt="" class="work-image"></a>
+                <a href="https://vanshika-nahar.github.io/aceestate.github.io/"><img src="images/work6.png" alt="" class="work-image"></a>
             </div>
         </section>
         <section id="contact">
@@ -134,6 +134,7 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
