--- a/index.html
+++ b/index.html
@@ -5,25 +5,40 @@
     <meta charset="UTF-8">
     <link rel="icon" href="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio | Vanshika Nahar</title>
 </head>
 
 <body>
-    <nav>
-        <div class="logo">
-            <a href="" class="logo-a">VN</a>
+    <nav style="background-color: transparent !important;" class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="logo">
+                <span class="logo-a">VN</span>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="#skill">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#work">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skill">Skills</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
     </nav>
-
     <main>
         <section id="home">
             <div class="info">
@@ -37,7 +52,7 @@
                     innovative solutions to complex problems.
                 </span>
                 <span class="btn-one">
-                    <a href="https://drive.google.com/file/d/1kPxYnj8aLZXFoXzx9bi8tkbMd0akKyrw/view?usp=share_link" target="_blank">
+                    <a href="https://drive.google.com/file/d/17UMTfLkVOhvtmzwcXa9CgwYMmfZIf_2y/view?usp=sharing" target="_blank">
                         <button class="download-cv">
                             Download CV
                         </button>
@@ -134,7 +149,9 @@
             </div>
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
